<resources>
    <string name="app_name">SlamHub</string>
    <string name="calculator_app">Calculator App</string>
    <string name="scoreboard_app">Scoreboard App</string>
    <string name="btn_scoreboard">SlamScore</string>
    <string name="btn_calculator">SlamCalc</string>
    <string name="btn_games">SlamMatch</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="reset">Reset</string>
    <string name="time_left">Time Left</string>
    <string name="str_0">0</string>
    <string name="str_1">1</string>
    <string name="str_2">2</string>
    <string name="str_3">3</string>
    <string name="str_4">4</string>
    <string name="str_5">5</string>
    <string name="str_6">6</string>
    <string name="str_7">7</string>
    <string name="str_8">8</string>
    <string name="str_9">9</string>
    <string name="dot">.</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiply">×</string>
    <string name="divide">÷</string>
    <string name="equals">=</string>
    <string name="power">x^y</string>
    <string name="root">x^(1/y)</string>
    <string name="log10">log</string>
    <string name="factorial">x!</string>
    <string name="C">C</string>
    <string name="backspace">⌫</string>
    <string name="add_3_points">+3 PONTOS</string>
    <string name="add_2_points">+2 PONTOS</string>
    <string name="add_free_throw">Tiro Livre</string>
    <string name="restart_game">Reiniciar Partida</string>
    <string name="starting_time">10:00</string>
    <string name="team_a_placeholder">Time A</string>
    <string name="team_b_placeholder">Time B</string>
    <string name="team_a_hint">Nome Time A</string>
    <string name="team_b_hint">Nome Time B</string>
    <string name="add_manual">Adicionar Partida Manual</string>
    <string name="add_team_a_placeholder">Nome do Time A</string>
    <string name="add_team_b_placeholder">Nome do Time B</string>
    <string name="add_team_a_points">Pontuação do Time A</string>
    <string name="add_team_b_points">Pontuação do Time B</string>
    <string name="date_example">Data (Ex: 25/05/2024)*</string>
    <string name="hour_example">Hora (Ex: 14:30)*</string>
    <string name="number_of_quarters">Número de Quartos</string>
    <string name="save_match">Salvar Partida</string>
    <string name="add_match">Adicionar Partida</string>
    <string name="ast_title">AST%</string>
    <string name="ast_formula">Assist Ratio = (AST ÷ (FGA + (0.44 × FTA) + AST + TO)) × 100</string>
    <string name="ast_hint_ast">AST (Assists)</string>
    <string name="ast_hint_fga">FGA (Field Goal Attempts)</string>
    <string name="ast_hint_fta">FTA (Free Throw Attempts)</string>
    <string name="ast_hint_to">TO (Turnovers)</string>
    <string name="ast_calculate">Calcular AST%</string>
    <string name="ast_clear">Limpar</string>
    <string name="ast_result_default">AST Ratio: 0.00%</string>
    <string name="ast_formula_label">Cálculo: —</string>
    <string name="matches_history">Histórico de Partidas</string>
    <string name="delete_match_description">Remover partida</string>
    <string name="ast_percent">AST%</string>
    <string name="hub">Hub</string>
    <string name="toggle_theme">Alternar tema</string>
</resources>