<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ScoreboardApp">

    <LinearLayout
        android:id="@+id/layoutPlacar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <EditText
                android:id="@+id/timeA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/team_a_placeholder"
                android:inputType="textCapCharacters"
                android:textSize="14sp"
                android:autofillHints="none"
                android:hint="@string/team_a_hint" />

            <TextView
                android:id="@+id/placarTimeA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/str_0"
                android:textSize="54sp" />

            <Button
                android:id="@+id/tresPontosA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/add_3_points" />

            <Button
                android:id="@+id/doisPontosA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/add_2_points" />

            <Button
                android:id="@+id/tiroLivreA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/add_free_throw" />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray"
            android:layout_marginTop="16dp"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <EditText
                android:id="@+id/timeB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/team_b_placeholder"
                android:inputType="textCapCharacters"
                android:textSize="14sp"
                android:fontFamily="sans-serif"
                android:autofillHints="none"
                android:hint="@string/team_b_hint" />

            <TextView
                android:id="@+id/placarTimeB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/str_0"
                android:textSize="54sp"
                android:fontFamily="sans-serif"/>

            <Button
                android:id="@+id/tresPontosB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/add_3_points" />

            <Button
                android:id="@+id/doisPontosB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/add_2_points" />

            <Button
                android:id="@+id/tiroLivreB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/add_free_throw" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutTimer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layoutPlacar"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:text="@string/starting_time"
            android:textColor="@android:color/black"
            android:textSize="48sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnStartPause"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/play" />

            <Button
                android:id="@+id/btnResetTimer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/reset" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/reiniciarPartida"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/restart_game"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="32dp"/>

</RelativeLayout>